# FlightDataHandler1

./: CMakeLists.txt  README.md
Application/: app.cpp
Application/Map/: map.cpp  map.h  map_part.cpp  map_part.h
Application/UI/: button.cpp  button.h
Application/Utils/: CoordsConverter.cpp  CoordsConverter.h  coords_converter2.cpp
SparkyEngine/lib/FreeImage/Source/: Utilities.h
SparkyEngine/lib/FreeImage/Source/ZLib/: gzlib.c
SparkyEngine/lib/boost/1.81.0_1/: INSTALL_RECEIPT.json
SparkyEngine/lib/boost/1.81.0_1/lib/: libboost_atomic-mt.dylib  libboost_chrono-mt.dylib  libboost_chrono.dylib  libboost_container-mt.dylib  libboost_container.dylib  libboost_context-mt.dylib  libboost_contract-mt.dylib  libboost_contract.dylib  libboost_coroutine-mt.dylib  libboost_coroutine.dylib  libboost_date_time-mt.dylib  libboost_date_time.dylib  libboost_fiber-mt.dylib  libboost_filesystem-mt.dylib  libboost_filesystem.dylib  libboost_graph-mt.dylib  libboost_graph.dylib  libboost_iostreams-mt.dylib  libboost_iostreams.dylib  libboost_json-mt.dylib  libboost_json.dylib  libboost_locale-mt.dylib  libboost_log-mt.dylib  libboost_log.dylib  libboost_log_setup-mt.dylib  libboost_log_setup.dylib  libboost_math_c99-mt.dylib  libboost_math_c99.dylib  libboost_math_c99f-mt.dylib  libboost_math_c99f.dylib  libboost_math_c99l-mt.dylib  libboost_math_c99l.dylib  libboost_math_tr1-mt.dylib  libboost_math_tr1.dylib  libboost_math_tr1f-mt.dylib  libboost_math_tr1f.dylib  libboost_math_tr1l-mt.dylib  libboost_math_tr1l.dylib  libboost_nowide-mt.dylib  libboost_nowide.dylib  (+31 more)
SparkyEngine/lib/box2d/2.4.1/: INSTALL_RECEIPT.json
SparkyEngine/lib/box2d/2.4.1/.brew/: box2d.rb
SparkyEngine/lib/curl/8.0.1/: INSTALL_RECEIPT.json
SparkyEngine/lib/curl/8.0.1/lib/: libcurl.4.dylib
SparkyEngine/lib/freetype-2.10.0/: freetype_headers.h
SparkyEngine/lib/freetype-2.10.0/freetype-gl/: common.h  texture-atlas.c  texture-atlas.h  texture-font.c  texture-font.h
SparkyEngine/lib/freetype-2.10.0/include/freetype/: freetype.h
SparkyEngine/lib/glfw/: cmake_uninstall.cmake
SparkyEngine/lib/glfw/docs/: Doxyfile
SparkyEngine/lib/gorilla-audio/src/: ga.c  gau.c
SparkyEngine/lib/gorilla-audio/src/common/: gc_common.h  gc_thread.c  gc_thread.h
SparkyEngine/lib/gorilla-audio/src/devices/: ga_openal.h  ga_xaudio2.c
SparkyEngine/lib/imagemagick/7.1.1-7/: INSTALL_RECEIPT.json
SparkyEngine/lib/imagemagick/7.1.1-7/.brew/: imagemagick.rb
SparkyEngine/lib/imagemagick/7.1.1-7/lib/: libMagick++-7.Q16HDRI.5.dylib  libMagick++-7.Q16HDRI.la  libMagickCore-7.Q16HDRI.10.dylib  libMagickCore-7.Q16HDRI.la  libMagickWand-7.Q16HDRI.10.dylib  libMagickWand-7.Q16HDRI.la
SparkyEngine/lib/libpng/1.6.37/: INSTALL_RECEIPT.json
SparkyEngine/lib/libvorbis/lib/: barkmel.c  envelope.c  mapping0.c  os.h  psy.c  psytune.c  tone.c
SparkyEngine/lib/libvorbis/lib/modes/: floor_all.h  psych_44.h  residue_44.h  residue_44u.h  residue_8.h
SparkyEngine/lib/mapnik/3.1.0_17/: INSTALL_RECEIPT.json
SparkyEngine/lib/mapnik/3.1.0_17/.brew/: mapnik.rb
SparkyEngine/lib/openal-soft/1.22.2/: INSTALL_RECEIPT.json
SparkyEngine/lib/openal-soft/1.22.2/.brew/: openal-soft.rb
SparkyEngine/lib/openal-soft/1.22.2/lib/: libopenal.1.22.2.dylib
SparkyEngine/lib/opencv/4.7.0_3/: INSTALL_RECEIPT.json
SparkyEngine/lib/opencv/4.7.0_3/.brew/: opencv.rb
SparkyEngine/lib/opencv/4.7.0_3/lib/: libopencv_alphamat.4.7.0.dylib  libopencv_aruco.4.7.0.dylib  libopencv_barcode.4.7.0.dylib  libopencv_bgsegm.4.7.0.dylib  libopencv_bioinspired.4.7.0.dylib  libopencv_calib3d.4.7.0.dylib  libopencv_ccalib.4.7.0.dylib  libopencv_core.4.7.0.dylib  libopencv_datasets.4.7.0.dylib  libopencv_dnn.4.7.0.dylib  libopencv_dnn_objdetect.4.7.0.dylib  libopencv_dnn_superres.4.7.0.dylib  libopencv_dpm.4.7.0.dylib  libopencv_face.4.7.0.dylib  libopencv_features2d.4.7.0.dylib  libopencv_flann.4.7.0.dylib  libopencv_freetype.4.7.0.dylib  libopencv_fuzzy.4.7.0.dylib  libopencv_hfs.4.7.0.dylib  libopencv_highgui.4.7.0.dylib  libopencv_img_hash.4.7.0.dylib  libopencv_imgcodecs.4.7.0.dylib  libopencv_imgproc.4.7.0.dylib  libopencv_intensity_transform.4.7.0.dylib  libopencv_line_descriptor.4.7.0.dylib  libopencv_mcc.4.7.0.dylib  libopencv_ml.4.7.0.dylib  libopencv_objdetect.4.7.0.dylib  libopencv_optflow.4.7.0.dylib  libopencv_phase_unwrapping.4.7.0.dylib  libopencv_photo.4.7.0.dylib  libopencv_plot.4.7.0.dylib  libopencv_quality.4.7.0.dylib  libopencv_rapid.4.7.0.dylib  libopencv_reg.4.7.0.dylib  libopencv_rgbd.4.7.0.dylib  (+19 more)
SparkyEngine/src/: engine.h  sparky.h
SparkyEngine/src/audio/: sound.cpp  sound.h  sound_manager.cpp  sound_manager.h
SparkyEngine/src/entity/: Entity.cpp  Entity.h
SparkyEngine/src/entity/component/: Component.cpp  Component.h  Components.h  Physics2DComponent.cpp  Physics2DComponent.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
SparkyEngine/src/graphics/: batchrenderer2d.cpp  batchrenderer2d.h  camera.cpp  camera.h  font.cpp  font.h  font_manager.cpp  font_manager.h  label.cpp  label.h  light.cpp  light.h  lightsetup.cpp  lightsetup.h  particle.cpp  particle.h  ray.cpp  ray.h  renderable2d.h  renderer2d.h  shader.cpp  shader.h  shadow.cpp  shadow.h  simple2drenderer.cpp  simple2drenderer.h  sprite.cpp  sprite.h  staticsprite.cpp  staticsprite.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h  window.cpp  window.h
SparkyEngine/src/graphics/buffers/: buffer.cpp  buffer.h  indexbuffer.cpp  indexbuffer.h  vertexarray.cpp  vertexarray.h
SparkyEngine/src/graphics/layers/: group.cpp  group.h  layer.cpp  layer.h
SparkyEngine/src/maths/: aabb.cpp  aabb.h  mat4.cpp  mat4.h  maths.h  maths_func.h  rectangle.cpp  rectangle.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
SparkyEngine/src/physics/: physcis.h  physics.cpp
SparkyEngine/src/shaders/: basicTexNoLight.frag  transparent.frag  transparent.vert
SparkyEngine/src/shaders/test/: shader1.frag  shader1.vert
SparkyEngine/src/utils/: colorTransformer.h  fileutils.h  imageLoad.h  stringutils.h  timer.h  timestep.h
(+331 files in other folders)
